--- a/website_apps_store/static/src/css/main.less
+++ b/website_apps_store/static/src/css/main.less
@@ -1,5 +1,5 @@
-.desc_rst {
-    .reference:first-child{
-        display: none;
+.desc_rst > {
+    .document > .reference{
+         display: none;
     }
 }
