[MIG] apps_download: Migration to 12.0

--- a/apps_download/views/product_template_view.xml
+++ b/apps_download/views/product_template_view.xml
@@ -2,6 +2,7 @@
 <!--
     Copyright 2017-Today BizzAppDev - Ruchir Shukla <ruchir@bizzappdev.com>
     Copyright 2017-Today AgentERP - Georg Notter <georg.notter@agenterp.com>
+    Copyright 2017-Today Elico Corp - (https://www.elico-corp.com)
     License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl).
 -->
 <odoo>
