--- a/website_apps_store/views/assets.xml
+++ b/website_apps_store/views/assets.xml
@@ -4,8 +4,7 @@
         <template id="assets_frontend" name="Website Apps Store"
             inherit_id="website.assets_frontend">
             <xpath expr="." position="inside">
-                <link rel="stylesheet" href="/website_apps_store/static/src/css/style.css"/>
-                <link rel="stylesheet" href="/website_apps_store/static/src/css/main.less"/>
+                <link rel="stylesheet" href="/website_apps_store/static/src/css/main.scss"/>
                 <script type="text/javascript" src="/website_apps_store/static/src/js/website_sale.js"></script>
                 <script type="text/javascript" src="/website_apps_store/static/src/js/website_apps_store_tour.js"></script>
             </xpath>
