[FIX] website_apps_store: Javascript WebsiteSale

--- a/website_apps_store/static/src/css/main.scss
+++ b/website_apps_store/static/src/css/main.scss
@@ -12,3 +12,8 @@
     max-height: 15rem;
     overflow-y: auto;
 }
+
+#product_details .col-form-label {
+  padding-top: 0;
+  padding-bottom: 0;
+}
