--- a/website_apps_store/views/templates.xml
+++ b/website_apps_store/views/templates.xml
@@ -194,79 +194,79 @@
                 <t t-if="product.odoo_module_id">
                     <t t-set="product_var_id" t-value="product.get_version_info()"/>
                 </t>
-                <div class="col-md-4 container">
-                    <div class="row">
-                        <div class="col-xs-12 container p-0" t-if="product.odoo_module_id">
-                            <div class="text-left col-xs-4 p-0">
+                <div class="col-md-4">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id">
+                        <div class="row">
+                            <div class="col-md-4 p-0">
                                 <b>Technical Name: </b>
                             </div>
-                            <div class="col-xs-8 p-0">
+                            <div class="col-md-8 p-0">
                                 <span class="tech_detail" t-esc="product_var_id.odoo_module_version_id.module_id.technical_name"/>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 p-0" t-if="product.odoo_module_id and len(product.odoo_module_id.organization_serie_ids) == 1">
-                            <div class="pull-left text-left col-xs-4 p-0">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id and len(product.odoo_module_id.organization_serie_ids) == 1">
+                        <div class="row">
+                            <div class="col-xs-4 p-0">
                                 <b>Version: </b>
                             </div>
-                            <div class="pull-right col-xs-8 p-0">
+                            <div class="col-xs-8 p-0">
                                 <span class="tech_detail" t-esc="product_var_id.odoo_module_id.organization_serie_ids[0].name"/>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 p-0" t-if="product.odoo_module_id">
-                            <div class="pull-left text-left col-xs-4 p-0">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id">
+                        <div class="row">
+                            <div class="col-md-4 p-0">
                                 <b>License: </b>
                             </div>
-                            <div class="pull-right col-xs-8 p-0">
+                            <div class="col-md-8 p-0">
                                 <a t-att-href="product_var_id.app_license_id.website" class="license_url" target="_blank">
                                     <span class="license_detail" t-esc="product_var_id.app_license_id.name"/>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 p-0" t-if="product.odoo_module_id">
-                            <div class="pull-left text-left col-xs-4 p-0">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id">
+                        <div class="row">
+                            <div class="col-md-4 p-0">
                                 <b>Author: </b>
                             </div>
-                            <div class="pull-right col-xs-8 p-0">
+                            <div class="col-md-8 p-0">
                                 <span class="author_detail" t-esc="', '.join(author.name for author in product_var_id.app_author_ids)"/>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 p-0" t-if="product.odoo_module_id">
-                            <div class="pull-left text-left col-xs-4 p-0">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id">
+                        <div class="row">
+                            <div class="col-md-4 p-0">
                                 <b>Maintainer: </b>
                             </div>
-                            <div class="pull-right col-xs-8 p-0">
+                            <div class="col-md-8 p-0">
                                 <a href="https://odoo-community.org" target="_blank">
                                     <span class="main_detail">https://odoo-community.org</span>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 p-0" t-if="product.odoo_module_id">
-                            <div class="pull-left text-left col-xs-4 p-0">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id">
+                        <div class="row">
+                            <div class="col-md-4 p-0">
                                 <b>Website: </b>
                             </div>
-                            <div class="pull-right col-xs-8 p-0">
+                            <div class="col-md-8 p-0">
                                 <a t-att-href="product_var_id.app_website" target="_blank">
                                     <span class="website_detail" t-esc="product_var_id.app_website"/>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 p-0" t-if="product.odoo_module_id">
-                            <div class="pull-left text-left col-xs-4 p-0">
+                    <div class="col-md-12 p-0" t-if="product.odoo_module_id">
+                        <div class="row">
+                            <div class="col-md-4 p-0">
                                 <b>Repository: </b>
                             </div>
-                            <div class="pull-right col-xs-8 p-0" style="overflow-wrap:break-word;">
+                            <div class="col-md-8 p-0" style="overflow-wrap:break-word;">
                                 <a t-att-href="product_var_id.app_github_url" target="_blank">
                                     <span class="repo_detail" t-esc="product_var_id.app_github_url"/>
                                 </a>
@@ -294,7 +294,7 @@
             <xpath expr="//div[@id='product_details']/h1" position="replace">
             </xpath>
             <xpath expr="//div[@id='product_details']" position="attributes">
-                <attribute name="class" remove="col-md-6 offset-xl-2" add="col-sm-4 col-md-4"></attribute>
+                <attribute name="class" remove="col-md-6 offset-xl-2" add="col-sm-4 col-md-4" separator=" "></attribute>
             </xpath>
         </template>
         <template id="product_quantity_customize" inherit_id="website_sale.product_quantity">
