--- a/apps_download/views/product_template_view.xml
+++ b/apps_download/views/product_template_view.xml
@@ -18,6 +18,7 @@
                         <field name="dependent_product_ids" colspan="4" nolabel="1"/>
                         <button string="Get all Dependencies" type="object" name="generate_zip_file"/>
                         <field name="module_path"/>
+                        <field name="module_zip_generate_date"/>
                     </page>
                 </xpath>
             </field>
