--- a/website_apps_store/views/templates.xml
+++ b/website_apps_store/views/templates.xml
@@ -7,7 +7,7 @@
     <data>
         <!-- Filter: Category by -->
         <template id="category_display" name="Show Category by">
-            <div class="dropdown btn-group dropdown_category_by">
+            <div class="dropdown dropdown mt-2 ml-md-2 dropdown_category_by">
                 <!-- Search selected category -->
                 <t t-set="selected_category" t-value="False" />
                 <t t-foreach="category_all" t-as="cat">
@@ -19,7 +19,7 @@
                 </t>
                 <!-- Dropdown menu -->
                 <a
-                    class="btn btn-secondary dropdown-toggle ml-2"
+                    class="btn btn-secondary dropdown-toggle"
                     href="#"
                     role="button"
                     id="dropdownMenuFilterCategoryBy"
@@ -51,7 +51,7 @@
         </template>
         <!-- Filter: Version by -->
         <template id="version_display" name="Show Version by">
-            <div class="dropdown btn-group dropdown_version_by">
+            <div class="dropdown mt-2 ml-md-2 dropdown_version_by">
                 <!-- Search selected version -->
                 <t t-set="selected_version" t-value="False" />
                 <t t-foreach="versions" t-as="ver">
@@ -63,7 +63,7 @@
                 </t>
                 <!-- Dropdown menu -->
                 <a
-                    class="btn btn-secondary dropdown-toggle ml-2"
+                    class="btn btn-secondary dropdown-toggle"
                     href="#"
                     role="button"
                     id="dropdownMenuFilterVersionBy"
@@ -96,7 +96,7 @@
         </template>
         <!-- Filter: Maturity by -->
         <template id="maturity_display">
-            <div class="dropdown btn-group dropdown_maturity_by">
+            <div class="dropdown mt-2 ml-md-2 dropdown_maturity_by">
                 <!-- Search selected maturity -->
                 <t t-set="selected_maturity" t-value="False" />
                 <t
@@ -121,7 +121,7 @@
                 />
                 <!-- Dropdown menu -->
                 <a
-                    class="btn btn-secondary dropdown-toggle ml-2"
+                    class="btn btn-secondary dropdown-toggle"
                     href="#"
                     role="button"
                     id="dropdownMenuFilterMaturityBy"
@@ -189,7 +189,10 @@
         </template>
         <!-- Product Item Cell -->
         <template id="products_item_customize" inherit_id="website_sale.products_item">
-            <xpath expr="//section" position="attributes">
+            <xpath
+                expr="//div[hasclass('o_wsale_product_information_text')]"
+                position="attributes"
+            >
                 <attribute
                     name="t-att-style"
                 >'padding-bottom: 1px;' if product.odoo_module_id else ''</attribute>
@@ -210,16 +213,22 @@
                         class="font_12"
                     />
                     <br />
-                    <t t-foreach="product.attribute_line_ids" t-as="attr">
-                        <span
-                            t-esc="' / '.join(value.name for value in attr.value_ids.sorted(reverse=True))"
-                            class="font_12"
-                        />
-                    </t>
-                    <!-- Download counter -->
-                    <div class="pull-right">
-                        <span class="fa fa-download" />
-                        <span t-esc="product.total_download_count" />
+                    <div class="d-flex d-flex-row mt-2">
+                        <!-- Versions -->
+                        <div class="text-left">
+                            <t t-foreach="product.attribute_line_ids" t-as="attr">
+                                <span
+                                    t-esc="' / '.join(value.name for value in attr.value_ids.sorted(reverse=True))"
+                                    class="font_12"
+                                />
+                                <br />
+                            </t>
+                        </div>
+                        <!-- Download counter -->
+                        <div class="ml-auto text-right">
+                            <span class="fa fa-download" />
+                            <span t-esc="product.total_download_count" />
+                        </div>
                     </div>
                 </t>
             </xpath>
@@ -230,10 +239,10 @@
                     t-options="{'widget': 'monetary', 'display_currency': website.currency_id}"
                 />
             </xpath>
-            <xpath expr="//span[@t-field='product.image']" position="attributes">
+            <xpath expr="//span[@t-field='product.image_1920']" position="attributes">
                 <attribute
                     name="t-options"
-                >{'widget': 'image', 'resize': None, 'zoom': 'image'}</attribute>
+                >{'widget': 'image', 'resize': None, 'zoom': 'image', 'preview_image': 'image_1024' if product_image_big else 'image_256'}</attribute>
             </xpath>
         </template>
         <!-- Product Detail Page Customization -->
@@ -282,17 +291,15 @@
                         <span class="o_website_form_recaptcha" />
                     </div>
                 </div>
-                <div class="col-md-12 p-0" t-if="product.odoo_module_id">
-                    <div class="col-md-4 mt16 mb16">
-                        <button
-                            class="btn btn-primary btn-lg"
-                            name="download_zip"
-                            id="download_zip"
-                            t-att-data-tmpl-id="product.id"
-                        >Download
-                                    <span class="fa fa-download" />
-                        </button>
-                    </div>
+                <div class="col-md-12 p-0 mt16 mb16" t-if="product.odoo_module_id">
+                    <button
+                        class="btn btn-primary btn-lg"
+                        name="download_zip"
+                        id="download_zip"
+                        t-att-data-tmpl-id="product.id"
+                    >Download
+                                <span class="fa fa-download" />
+                    </button>
                 </div>
             </xpath>
             <xpath expr="//section" position="inside">
@@ -422,8 +429,12 @@
                 </div>
             </xpath>
             <xpath expr="//div[hasclass('col-md-6')]" position="attributes">
-                <attribute name="class" remove="col-md-6" />
-                <attribute name="class" add="col-md-4" separator=" " />
+                <attribute
+                    name="class"
+                    remove="col-md-6 col-xl-8"
+                    add="col-md-4"
+                    separator=" "
+                />
             </xpath>
             <xpath expr="//div[hasclass('row')][2]" position="before">
                 <div class="col-sm-12 text-center mb48">
@@ -446,7 +457,7 @@
             <xpath expr="//div[@id='product_details']" position="attributes">
                 <attribute
                     name="class"
-                    remove="col-md-6 offset-xl-2"
+                    remove="col-md-6"
                     add="col-sm-4 col-md-4"
                     separator=" "
                 />
@@ -458,6 +469,35 @@
         >
             <xpath expr='//div[hasclass("css_quantity")]' position="attributes">
                 <attribute name="t-if">not product.odoo_module_id</attribute>
+            </xpath>
+        </template>
+        <!-- Remove Detail Product Page Carousel Height -->
+        <template
+            id="shop_product_carousel"
+            inherit_id="website_sale.shop_product_carousel"
+        >
+            <xpath expr='//div[hasclass("carousel-inner")]' position="attributes">
+                <attribute name="class" remove="h-100" separator=" " />
+            </xpath>
+            <xpath
+                expr='//div[contains(@t-attf-class, "carousel-item")]'
+                position="attributes"
+            >
+                <attribute
+                    name="t-attf-class"
+                >carousel-item #{' active' if product_image_first else ''}</attribute>
+            </xpath>
+            <xpath
+                expr='//div[contains(@t-attf-class, "carousel-item")]/div[1]'
+                position="attributes"
+            >
+                <attribute name="class" remove="h-100" separator=" " />
+            </xpath>
+            <xpath
+                expr='//div[contains(@t-attf-class, "carousel-item")]/div[2]'
+                position="attributes"
+            >
+                <attribute name="class" remove="h-100" separator=" " />
             </xpath>
         </template>
     </data>
