[MIG] website_apps_store: Migration to 14.0

--- a/website_apps_store/static/src/scss/main.scss
+++ b/website_apps_store/static/src/scss/main.scss
@@ -23,3 +23,11 @@
         height: unset;
     }
 }
+
+#product_detail[data-is-module="1"]
+    #o-carousel-product
+    .carousel-outer
+    .carousel-inner
+    img {
+    width: auto;
+}
