--- a/website_apps_store/views/templates.xml
+++ b/website_apps_store/views/templates.xml
@@ -393,6 +393,7 @@
                             <div class="col-md-8 p-0">
                                 <a
                                     t-att-href="product_var_id.app_website"
+                                    id="website_detail_href"
                                     target="_blank"
                                 >
                                     <span
