[FIX] website_apps_store: Modify website href on combination change
Steps to reproduce the problem:

- Have a module like base_location with the initial version with website
  URL A, and a newer version with website URL B
- Switch the version in the shop product detail.
- The text of the URL is changed, but not the href.

Fixes https://github.com/OCA/website/issues/858

--- a/website_apps_store/views/templates.xml
+++ b/website_apps_store/views/templates.xml
@@ -373,7 +373,11 @@
                             <b>Website: </b>
                         </div>
                         <div class="col-md-8 p-0">
-                            <a t-att-href="product_var_id.app_website" target="_blank">
+                            <a
+                                t-att-href="product_var_id.app_website"
+                                id="website_detail_href"
+                                target="_blank"
+                            >
                                 <span
                                     class="website_detail"
                                     t-esc="product_var_id.app_website"
